--- a/dcrm/app/templates/home.html
+++ b/dcrm/app/templates/home.html
@@ -4,7 +4,46 @@
 
 {% if user.is_authenticated %}
 
-<h1>Hello word</h1>
+{% if records %}
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">Zipcode</th>
+
+
+    </tr>
+  </thead>
+  <tbody class="table-group-divider">
+  {% for record in records %}
+<tr>
+      <th scope="row"><a href="{% url 'record' record.id %}"> {{record.id}} </a></th>
+      <td>{{record.first_name}}</td>
+      <td>{{record.last_name}}</td>
+      <td>{{record.email}}
+        <td>{{record.phone}}</td>
+        <td>{{record.address}}</td>
+        <td>{{record.city}}</td>
+      <td>{{record.state}}</td>
+        <td>{{record.zipcode}}</td>
+
+    </tr>
+
+  {% endfor %}
+
+
+  </tbody>
+</table>
+
+{% endif %}
+
 {% else %}
 <div class="col-md-6 offset-md-3"><h1>Login</h1>
     <br/>
